# haykal

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeCache.txt  Makefile  cmake_install.cmake  glad.c  haykal.h  nib.h
src/: haykal.c  haykal.h  setup.c  util.c
test/: CMakeLists.txt
test/src/: main.c
test/test/: CMakeLists.txt
test/test/src/: main.c
